[metadata]
name = charabia
version = attr: charabia.__version__
author = Kreusada
author_email = kreusadaprojects@gmail.com
description = Charabia - French for gibberish. Another reversible encryption based encoder.
url = https://github.com/Kreusada/Charabia
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = 
    charabia